--- a/apps/geoda/index.html
+++ b/apps/geoda/index.html
@@ -23,7 +23,16 @@
 <script type="text/javascript" src="../../media/js/dropins.js" id="dropboxjs" data-app-key="50dk6qp6nc2fcxs"></script>
 <script src="../../media/js/cartodb.js"></script>
 <script src="../../media/js/zip/zip.js"></script>
-<script src="../../gen/jsgeoda.js"></script
+<script src="../../gen/jsgeoda.js"></script>
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-151341144-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-151341144-1');
+</script>
 </head>
 
 <body>
