--- a/apps/geoda/index.html
+++ b/apps/geoda/index.html
@@ -7,6 +7,8 @@
 
 
 <title>GeoDa-Web</title>
+
+<link rel="icon" href="../../media/img/geoda-logo.png">
 <link rel="stylesheet" href="../../media/css/leaflet.css" />
 <link rel="stylesheet" href="../../media/css/chosen.css" />
 <link rel="stylesheet" href="../../media/asserts/css/bootstrap.min.css" />
@@ -57,7 +59,7 @@
 	<div style="clear: left;"></div>
 	<table class="toolbar_tbl" align="left" style="width: 1024px;">
 	  <tr>
-	  <td width=80 style='width:120px;'>
+	  <td width=100 style='width:200px;'>
 	    <div class="blockBtn" id="btnMultiLayer"><img src="../../media/img/multilayer.png"/><span></span></div>
 	  </td>
 	  <td width=80>
